--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.example</groupId>
-	<artifactId>myproject</artifactId>
+	<groupId>br.com.hapvida</groupId>
+	<artifactId>pepsam</artifactId>
 	<version>1</version>
-    <packaging>war</packaging>
+    	<packaging>war</packaging>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
