--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         </plugins>
         
     </build>
-<!-- get every artifact through hapvida-maven-group, which proxies all the artifacts that we need   
+<!-- get every artifact through hapvida-maven-group, which proxies all the artifacts that we need   --> 
    <repositories>
        <repository>
            <id>hapvida-maven-group</id>
@@ -47,6 +47,6 @@
             <url>http://ci-dev.hapvida.com.br:8081/repository/hapvida-maven-group/</url>
        </pluginRepository>
    </pluginRepositories>
--->
+
 </project>
 
